<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/border_bg"
        android:layout_margin="4dp"
        android:textSize="48sp"
        android:maxLength="12"
        android:padding="10dp"
        android:text="@string/_0"
        android:gravity="end|center_vertical|bottom"
        />
    <!-- row 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights" />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/slash"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            />


    </LinearLayout>
    <!-- row 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights" />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/asterisk"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            />


    </LinearLayout>
    <!-- row 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights" />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus_sign"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            />


    </LinearLayout>
    <!-- row 4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_decimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:onClick="onDecimalPoint"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights" />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:onClick="onClear"
            android:layout_margin="2dp"
            />

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus_sign"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            />


    </LinearLayout>
    <!-- row 5 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <ph.jamesdev.calculatorapp.CustomButton
            android:id="@+id/btn_equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onEqual"
            android:text="@string/equal_sign"
            android:layout_margin="2dp"
            />


    </LinearLayout>

</LinearLayout>